[gd_scene load_steps=6 format=3 uid="uid://bc347khpk1ja0"]

[ext_resource type="Texture2D" uid="uid://cjgss627udi13" path="res://tools/icons/icon_remove.svg" id="1"]
[ext_resource type="Script" path="res://tools/editor/VariantEditor.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://xipkuscb13ti" path="res://tools/editor/VariantSync.tscn" id="3"]
[ext_resource type="Script" path="res://tools/editor/controls/HBEditorSpinBox.gd" id="4"]
[ext_resource type="Script" path="res://tools/editor/controls/HBEditorLineEdit.gd" id="5"]

[node name="PanelContainer" type="VBoxContainer"]
offset_right = 588.0
offset_bottom = 188.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("1")

[node name="AudioOnlyCheckbox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Use audio only"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Variant Name"

[node name="LineEditName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("5")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Variant URL"

[node name="LineEditURL" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
editable = false
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("5")

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Variant Offset"

[node name="OffsetSpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
min_value = -2e+10
max_value = 2e+10
custom_arrow_step = 0.1
script = ExtResource("4")

[node name="ButtonSync" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sync variant"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Window" parent="." instance=ExtResource("3")]

[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSync" to="." method="_on_ButtonSync_pressed"]
[connection signal="position_offset_changed" from="Window" to="." method="_on_WindowDialog_offset_changed"]
